--- a/README.Rmd
+++ b/README.Rmd
@@ -18,14 +18,14 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of plumber.control is to ...
+The goal of plumber.control is to control all of your R plumber (actually any http based) services in one place.
 
 ## Installation
 
 Development version
 
 ``` R
-remotes::install_github("plumber.control")
+remotes::install_github("vanhry/plumber.control")
 ```
 
 ``` {r}
@@ -55,7 +55,13 @@ data <- create_table_plumber(system.file("plumber_services.yaml",package="plumbe
 data
 ```
 
-Buld Docker
+Also it's possible to use shiny application with:
+```r
+plumber.control::run_app()
+```
+![Shiny app screen](inst/shiny_app_image.png)
+
+Build Docker
 ```shell
 docker build . -t user/plumbercontrol_app -f Dockerfile.min
 ```
