--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # plumber.control
 
 <!-- badges: start -->
+[![R build status](https://github.com/vanhry/plumber.control/workflows/R-CMD-check/badge.svg)](https://github.com/vanhry/plumber.control/actions)
 <!-- badges: end -->
 
 The goal of plumber.control is to control all of your R plumber (actually any http based) services in one place.
@@ -66,3 +67,4 @@ Build Docker
 docker build . -t user/plumbercontrol_app -f Dockerfile.min
 ```
 
+Project was created using [golem](https://github.com/ThinkR-open/golem) package
