--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# plumber.control
+## plumber.control
 
 <!-- badges: start -->
 [![R build status](https://github.com/vanhry/plumber.control/workflows/R-CMD-check/badge.svg)](https://github.com/vanhry/plumber.control/actions)
@@ -21,7 +21,20 @@ knitr::opts_chunk$set(
 
 The goal of plumber.control is to control all of your R plumber (actually any http based) services in one place.
 
-## Installation
+# Shiny app
+
+#### Deployment of shiny app
+
+Lightweight version of shiny application based on [R-minimal Docker image](https://github.com/r-hub/r-minimal) with simple and secure [Caddy server](https://github.com/caddyserver/caddy)
+
+You just need to clone the repo, build the docker, install system variables `$HOST` and `$EMAIL`, and run:
+```docker-compose up -d```
+
+And that's it! `r emo::ji("contest")`
+
+# Package
+
+#### Installation of package
 
 Development version
 
